# address_search_field

./: .gitignore  CHANGELOG.md  LICENSE  README.md  documentation.bat  gen_doc.bat  gen_doc.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: address_search_field.podspec
ios/Classes/: AddressSearchFieldPlugin.h  AddressSearchFieldPlugin.m  SwiftAddressSearchFieldPlugin.swift
lib/: address_search_field.dart  address_search_field_web.dart  address_search_text_field.dart
lib/src/enums/: address_id.dart  directions_mode.dart  directions_units.dart  route_error.dart
lib/src/models/: addr_comm.dart  address.dart  address_point.dart  bounds.dart  coords.dart  directions.dart  waypoints_manager.dart
lib/src/notifiers/: route_notifier.dart
lib/src/services/: geo_methods.dart  location_service.dart
lib/src/utils/: address_id.dart  extensions.dart  http_client.dart  route_error.dart
lib/src/widgets/: address_dialog.dart  address_field.dart  address_locator.dart  address_search_box.dart  route_box.dart  (+4 more)
windows/: CMakeLists.txt  address_search_field_plugin.cpp
windows/include/address_search_field/: address_search_field_plugin.h
(+8 files in other folders)
